# cmc_ps-oct_processing

./: README.md
python_processing/: README.md  pyproject.toml
python_processing/config/: default.yaml
python_processing/examples/: synthetic_run.py
python_processing/matlab_export/: README.md  export_stage_array.m
python_processing/notebooks/: psoct_processing_tutorial.ipynb
python_processing/psoct_processing/: cli.py  config.py  contrasts.py  data.py  enface.py  export.py  io.py  logging_utils.py  pipeline.py  preprocess.py  provenance.py  psoct_matlab_compat.py  reconstruct.py  stitch.py  synthetic.py  validation.py
python_processing/tests/: test_channels.py  test_matlab_compat.py  test_preprocess.py  test_reconstruct.py  test_stitch.py  test_synthetic.py  test_validation.py
